# InformationRetrieval

./: CMakeLists.txt  CMyXML.cpp  ExpatImpl.h  Parser.cpp  Parser.h  SPIMI.cpp  SPIMI.h  StopWords.cpp  StopWords.h  main.cpp  run.sh  stemmer.cpp  stemmer.h  tempSet.xml
BSBI/: Makefile  README  bsbi.cpp  bsbi.h
BSBI/data/: doc1  doc3  doc4
SRC_BSBI/: bsbi.cpp  printer.cpp
SRC_BSBI/data/: doc2
expath/: ExpatImpl.h
stemmer/: driver.c  english.c  english.h
stemming/indexing/: string_util.h
